updated events page for week of 3/27

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 19 March 2017</span>
+                                        <span class="data">Last Updated: 27 March 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -115,30 +115,40 @@
 								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-							 	<li><a href="https://music.uni.edu/events/festivals-workshops-and-camps/midwest-international-conducting-symposium">ALL WEEK: Midwest International Conducting Symposium, Russell Hall &amp; GBPAC, Saturday, March 18, 2017 (All day) to Friday, March 24, 2017 (All day)</a></li>
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
-								<li>2/20: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, March 20, 2017 - 5:00 pm</li>
-								<li><a href="http://www.uni.edu/art/gallery.html">2/20: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
-								<li>2/21: Teaching for Diversity and Inclusion Faculty Learning Community Interest Meeting, Room 378, Rod Library, Tuesday, March 21, 2017 - 12:30 pm</li>
-								<li><a href="https://music.uni.edu/events">2/21: Guest Recital: Geoff Durbin, euphonium, Davis Hall, GBPAC, Tuesday, March 21, 2017 - 6:00 pm</a></li>
-								<li>2/21: Diversity Colloquium: Immigrant Communities in the Cedar Valley, Scholar Space, Rod Library, Tuesday, March 21, 2017 - 7:00 pm</li>
-								<li>2/21: Diversity Colloquium: Immigrant Communities in the Cedar Valley, Room 301, Rod Library, Tuesday, March 21, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">2/21: Guest Recital: Adam Larson Quartet, Davis Hall, GBPAC, Tuesday, March 21, 2017 - 8:00 pm</a></li>
-								<li>2/22: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, March 22, 2017 - 12:00 pm</li>
-								<li><a href="https://teachered.uni.edu/teacher-education-induction-ceremony-convocation">2/22: UNI Teacher Education Induction Convocation, Great Hall, GBPAC, Wednesday, March 22, 2017 - 4:00 pm</a></li>
-								<li>2/22: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, March 22, 2017 - 7:00 pm</li>
-								<li><a href="https://unialum.org/events/webinar-boomerangs-engaging-aging-workforce-america">2/22: Webinar: BOOMERangs - Engaging the Aging Workforce in America, Web (It's online), Wednesday, March 22, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>2/23 ALL DAY: FIRST Robotics Competition (FRC) Iowa Regional, McLeod Center, Thursday, March 23, 2017 (All day) to Saturday, March 25, 2017 (All day)</li>
-								<li><a href="https://music.uni.edu/events">2/23 ALL DAY: Northern Iowa Band Invitational, Davis Hall, GBPAC, Thursday, March 23, 2017 (All day)</a></li>
-								<li><a href="https://www.eventbrite.com/e/ncbi-leadership-for-diversity-inclusion-workshops-registration-16885929269">2/23: UNI-NCBI Leadership for Diversity and Inclusion Workshop, Room 301, Rod Library, Thursday, March 23, 2017 - 9:00 am to 4:00 pm</a></li>
-								<li><a href="https://chemistry.uni.edu/seminar-schedule">2/23: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 23, 2017 - 4:00 pm</a></li>
-								<li>2/23: Joseph Scapellato fiction reading, Room 0081, Bartlett Hall, Thursday, March 23, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">2/23: Guest Recital: Music of Harvey Sollberger for Flutes, Davis Hall, GBPAC, Thursday, March 23, 2017 - 8:00 pm</a></li>
-								<li><a href="https://earth.uni.edu/content/observatory-visit">2/23: Observatory Show, Room 137, McCollum Science Hall, Thursday, March 23, 2017 - 9:00 pm to 10:00 pm</a></li>
-								<li>2/24: Green Zone Training, State College Room, Maucker Union, Friday, March 24, 2017 - 1:00 pm to 2:30 pm</li>
-								<li><a href="https://music.uni.edu/events">2/24: Faculty Recital: Heather Peyton, oboe, Davis Hall, GBPAC, Friday, March 24, 2017 - 6:00 pm</a></li>
-								<li>2/24: [your response matters], Room 040, Lang Hall, Friday, March 24, 2017 - 7:30 pm</li>
-								<li><a href="https://www.facebook.com/events/1898159090427821/">2/25: Panther Gaming Convention, Gallagher Bluedorn Performing Arts Center, Saturday, March 25, 2017 - 10:00 am to 10:00 pm</a></li>
+								<li>3/27: Ethical Considerations in Research with Children with Disabilities,Room 409, Schindler Education Center, Monday, March 27, 2017 - 3:00 pm to 5:00 pm</li>
+								<li><a href="https://earth.uni.edu/">3/27: Earth and Environmental Sciences Seminar, Room 125, Latham Hall, Monday, March 27, 2017 - 4:00 pm to 5:00 pm</a></li>
+								<li>3/27: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, March 27, 2017 - 5:00 pm</li>
+								<li><a href="https://music.uni.edu/events">3/27: Performance Competition Finals, Great Hall, GBPAC, Monday, March 27, 2017 - 7:30 pm</a></li>
+								<li>3/27: Showing of movie "Hidden Figures", Old Central Ballroom, Maucker Union, Monday, March 27, 2017 - 7:30 pm</li>
+								<li>3/27: Forbidden Fruit: The Male Gaze and Medieval Women's Medicine, Oak Room, Maucker Union, Monday, March 27, 2017 - 8:00 pm</li>
+								<li><a href="https://www.physics.uni.edu/outreach/uni-physics-olympics">3/28: UNI/AEA 267 Regional Physics Competition, McLeod Center, Tuesday, March 28, 2017 - 9:00 am to 12:00 pm</a></li>
+								<li><a href="https://cet.uni.edu/events">3/28: Qualitative Data Analysis Software panel, Room 625, Schindler Education Center, Tuesday, March 28, 2017 - 12:00 pm</a></li>								
+								<li>3/28: Avoiding Plagiarism, Room 301, Rod Library, Tuesday, March 28, 2017 - 3:00 pm to 5:00 pm</li>
+								<li><a href="https://music.uni.edu/events">3/28: UNI Saxophone Studio Recital, Graham Hall, Russell Hall, Tuesday, March 28, 2017 - 8:00 pm</a></li>
+								<li>3/29 (ALL DAY): PTSD Awareness Conference, Maucker Union, Wednesday, March 29, 2017 (All day)</li>
+								<li><a href="http://www.redcrossblood.org/give/drive/driveSearchList.jsp?zipSponsor=UNI%20Cedar%20Falls">3/29: SAE/American Red Cross Blood Drive, Old Central Ballroom, Maucker Union, Wednesday, March 29, 2017 - 10:00 am to 4:00 pm</a></li>
+								<li>3/29: Wheaton Wellness Session: Digestive Health, Room 009, Gilchrist Hall, Wednesday, March 29, 2017 - 12:00 pm</li>
+								<li><a href="https://cet.uni.edu/events">3/29: What is a survey?, Room 625, Schindler Education Center, Wednesday, March 29, 2017 - 12:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/1857188897898536/">3/29: ISA Spring Diversity Showcase 2017, Coffeehouse, Maucker Union, Wednesday, March 29, 2017 - 6:00 pm</a></li>
+								<li><a href="https://www.physics.uni.edu/sites/default/files/begeman_lecture_poster_2017.pdf">3/29: Begeman Lecture 2017, Auditorium, Lang Hall, Wednesday, March 29, 2017 - 7:00 pm</a></li>
+								<li>3/30: Digital Media program launch, Lang Hall, Thursday, March 30, 2017 - 3:00 pm</li>
+								<li><a href="https://chemistry.uni.edu/seminar-schedule">3/30: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 30, 2017 - 4:00 pm</a></li>
+								<li><a href="https://langlit.uni.edu/news/final-thursday-reading-series-back-2017">3/30: Final Thursday Reading Series featuring Julianne Couch, The Hearst Center for the Arts, Thursday, March 30, 2017 - 7:00 pm</a></li>
+								<li><a href="https://www.facebook.com/UNIRISE/">3/30: Screening of 'The Good Lie', Center for Multicultural Education, Thursday, March 30, 2017 - 7:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">3/30: Tuba/Euphonium Studio Recital, Bengtson Auditorium, Russell Hall, Thursday, March 30, 2017 - 8:00 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">3/30: Observatory Show, Room 137, McCollum Science Hall, Thursday, March 30, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://grad.uni.edu/1st-annual-graduate-college-visit-day">3/31: Inaugural Graduate College VIsit Day, Scholar Space, Rod Library, Friday, March 31, 2017 - 8:30 am to 2:00 pm</a></li>
+								<li><a href="https://coe.uni.edu/SECRenovation">3/31: Schindler Education Center Rededication, Schindler Education Center, Friday, March 31, 2017 - 3:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">3/31: Faculty Recital: Cayla Bellamy, bassoon, Davis Hall, GBPAC, Friday, March 31, 2017 - 6:00 pm</a></li>
+								<li><a href="https://www.facebook.com/AugustWilsonFestival/">3/31: Staged reading of The Piano Lesson, Room 081, Lang Hall (Interpreters Theatre), Friday, March 31, 2017 - 7:00 pm</a></li>
+								<li>3/31: 2017 Hari Shankar Memorial Lecture: Where Mathematics Meets Art, Lantz Auditorium, McCollum Science Hall, Friday, March 31, 2017 - 7:30 pm</li>
+								<li><a href="https://music.uni.edu/events">3/31: Guest Recital: Anna Hersey, soprano, and Alan Johnson, piano, Davis Hall, GBPAC, Friday, March 31, 2017 - 8:00 pm</a></li>
+								<li><a href="https://music.uni.edu/suzuki/">4/1 (ALL WEEKEND): UNI Suzuki School Recital Weekend, Russell Hall, Saturday, April 1, 2017 (All day) to Sunday, April 2, 2017 (All day)</a></li>
+								<li>4/1: RodCon 2017, Lantz Auditorium, Rod Library, Saturday, April 1, 2017 - 10:00 am to 4:00 pm</li>
+								<li><a href="http://afsp.donordrive.com/index.cfm?fuseaction=donorDrive.event&eventID=4428">4/1: Out of the Darkness Campus Walk, Gallagher Bluedorn Performing Arts Center, Saturday, April 1, 2017 - 1:00 pm to 4:00 pm</a></li>
+								<li>4/1: Camp Adventure Dessertfest, Maucker Union, Rod Library, Saturday, April 1, 2017 - 3:00 pm</li>
+								<li><a href="https://www.facebook.com/UNIAfricanunion/?fref=ts">4/1: We are Africa: African Night, Old Central Ballroom, Maucker Union, Saturday, April 1, 2017 - 7:30 pm to 9:30 pm</a></li>
                             </ul>
 						</div>
                     </article>
