--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/3-31-class-recap.html">3/31/17 Sophie taught us a bit about acne and Joslny gave a speech about living on cruise ships</a></li>
 								<li><a href="html_bucket_class_recaps/3-29-class-recap.html">3/29/17 After giving Jacob L feedback we had a speech about homelessness and another about volunteering.</a></li>
 								<li><a href="html_bucket_class_recaps/3-27-class-recap.html">3/27/17 Addie gave a speech about music education and Jacob gave a presentation on suicide prevention.</a></li>
 								<li><a href="html_bucket_class_recaps/3-24-class-recap.html">3/24/17 Today we got to hear a speech about youth sports, and a presentation about weight loss.</a></li>
