--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 27 March 2017</span>
+                                        <span class="data">Last Updated: 2 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -116,39 +116,49 @@
 							 </p>
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
-								<li>3/27: Ethical Considerations in Research with Children with Disabilities,Room 409, Schindler Education Center, Monday, March 27, 2017 - 3:00 pm to 5:00 pm</li>
-								<li><a href="https://earth.uni.edu/">3/27: Earth and Environmental Sciences Seminar, Room 125, Latham Hall, Monday, March 27, 2017 - 4:00 pm to 5:00 pm</a></li>
-								<li>3/27: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, March 27, 2017 - 5:00 pm</li>
-								<li><a href="https://music.uni.edu/events">3/27: Performance Competition Finals, Great Hall, GBPAC, Monday, March 27, 2017 - 7:30 pm</a></li>
-								<li>3/27: Showing of movie "Hidden Figures", Old Central Ballroom, Maucker Union, Monday, March 27, 2017 - 7:30 pm</li>
-								<li>3/27: Forbidden Fruit: The Male Gaze and Medieval Women's Medicine, Oak Room, Maucker Union, Monday, March 27, 2017 - 8:00 pm</li>
-								<li><a href="https://www.physics.uni.edu/outreach/uni-physics-olympics">3/28: UNI/AEA 267 Regional Physics Competition, McLeod Center, Tuesday, March 28, 2017 - 9:00 am to 12:00 pm</a></li>
-								<li><a href="https://cet.uni.edu/events">3/28: Qualitative Data Analysis Software panel, Room 625, Schindler Education Center, Tuesday, March 28, 2017 - 12:00 pm</a></li>								
-								<li>3/28: Avoiding Plagiarism, Room 301, Rod Library, Tuesday, March 28, 2017 - 3:00 pm to 5:00 pm</li>
-								<li><a href="https://music.uni.edu/events">3/28: UNI Saxophone Studio Recital, Graham Hall, Russell Hall, Tuesday, March 28, 2017 - 8:00 pm</a></li>
-								<li>3/29 (ALL DAY): PTSD Awareness Conference, Maucker Union, Wednesday, March 29, 2017 (All day)</li>
-								<li><a href="http://www.redcrossblood.org/give/drive/driveSearchList.jsp?zipSponsor=UNI%20Cedar%20Falls">3/29: SAE/American Red Cross Blood Drive, Old Central Ballroom, Maucker Union, Wednesday, March 29, 2017 - 10:00 am to 4:00 pm</a></li>
-								<li>3/29: Wheaton Wellness Session: Digestive Health, Room 009, Gilchrist Hall, Wednesday, March 29, 2017 - 12:00 pm</li>
-								<li><a href="https://cet.uni.edu/events">3/29: What is a survey?, Room 625, Schindler Education Center, Wednesday, March 29, 2017 - 12:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/1857188897898536/">3/29: ISA Spring Diversity Showcase 2017, Coffeehouse, Maucker Union, Wednesday, March 29, 2017 - 6:00 pm</a></li>
-								<li><a href="https://www.physics.uni.edu/sites/default/files/begeman_lecture_poster_2017.pdf">3/29: Begeman Lecture 2017, Auditorium, Lang Hall, Wednesday, March 29, 2017 - 7:00 pm</a></li>
-								<li>3/30: Digital Media program launch, Lang Hall, Thursday, March 30, 2017 - 3:00 pm</li>
-								<li><a href="https://chemistry.uni.edu/seminar-schedule">3/30: Chemistry and Biochemistry Department Seminar, Room 201, McCollum Science Hall, Thursday, March 30, 2017 - 4:00 pm</a></li>
-								<li><a href="https://langlit.uni.edu/news/final-thursday-reading-series-back-2017">3/30: Final Thursday Reading Series featuring Julianne Couch, The Hearst Center for the Arts, Thursday, March 30, 2017 - 7:00 pm</a></li>
-								<li><a href="https://www.facebook.com/UNIRISE/">3/30: Screening of 'The Good Lie', Center for Multicultural Education, Thursday, March 30, 2017 - 7:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">3/30: Tuba/Euphonium Studio Recital, Bengtson Auditorium, Russell Hall, Thursday, March 30, 2017 - 8:00 pm</a></li>
-								<li><a href="https://earth.uni.edu/content/observatory-visit">3/30: Observatory Show, Room 137, McCollum Science Hall, Thursday, March 30, 2017 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="https://grad.uni.edu/1st-annual-graduate-college-visit-day">3/31: Inaugural Graduate College VIsit Day, Scholar Space, Rod Library, Friday, March 31, 2017 - 8:30 am to 2:00 pm</a></li>
-								<li><a href="https://coe.uni.edu/SECRenovation">3/31: Schindler Education Center Rededication, Schindler Education Center, Friday, March 31, 2017 - 3:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">3/31: Faculty Recital: Cayla Bellamy, bassoon, Davis Hall, GBPAC, Friday, March 31, 2017 - 6:00 pm</a></li>
-								<li><a href="https://www.facebook.com/AugustWilsonFestival/">3/31: Staged reading of The Piano Lesson, Room 081, Lang Hall (Interpreters Theatre), Friday, March 31, 2017 - 7:00 pm</a></li>
-								<li>3/31: 2017 Hari Shankar Memorial Lecture: Where Mathematics Meets Art, Lantz Auditorium, McCollum Science Hall, Friday, March 31, 2017 - 7:30 pm</li>
-								<li><a href="https://music.uni.edu/events">3/31: Guest Recital: Anna Hersey, soprano, and Alan Johnson, piano, Davis Hall, GBPAC, Friday, March 31, 2017 - 8:00 pm</a></li>
-								<li><a href="https://music.uni.edu/suzuki/">4/1 (ALL WEEKEND): UNI Suzuki School Recital Weekend, Russell Hall, Saturday, April 1, 2017 (All day) to Sunday, April 2, 2017 (All day)</a></li>
-								<li>4/1: RodCon 2017, Lantz Auditorium, Rod Library, Saturday, April 1, 2017 - 10:00 am to 4:00 pm</li>
-								<li><a href="http://afsp.donordrive.com/index.cfm?fuseaction=donorDrive.event&eventID=4428">4/1: Out of the Darkness Campus Walk, Gallagher Bluedorn Performing Arts Center, Saturday, April 1, 2017 - 1:00 pm to 4:00 pm</a></li>
-								<li>4/1: Camp Adventure Dessertfest, Maucker Union, Rod Library, Saturday, April 1, 2017 - 3:00 pm</li>
-								<li><a href="https://www.facebook.com/UNIAfricanunion/?fref=ts">4/1: We are Africa: African Night, Old Central Ballroom, Maucker Union, Saturday, April 1, 2017 - 7:30 pm to 9:30 pm</a></li>
+								<li>ALL WEEK: "Dr. Seuss Wants You" and "Facing Prejudice", Grout Museum of History &amp; Science, 503 South St., Waterloo, IA 50701, Tuesday, April 4, 2017 (All day) to Saturday, June 3, 2017 (All day)</li>
+								<li>ALL WEEK: 2017 Art Gay-la Exhibit, Learning Commons, Rod Library, Monday, April 3, 2017 - 8:00 am to Sunday, April 9, 2017 - 8:00 pm</li>
+								<li>4/3: CROW Forum: Outstanding Graduate Award Winne, Room 287, Rod Library, Monday, April 3, 2017 - 12:00 pm</li>
+								<li>4/3: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, April 3, 2017 - 5:00 pm</li>
+								<li>4/3: The Sigma Tau Delta Lecture, Room 120, Seerley Hall, Monday, April 3, 2017 - 7:00 pm</li>
+								<li>4/3: Pride Week Drag Ball, Auditorium, Lang Hall, Monday, April 3, 2017 - 8:00 pm</li>
+								<li>4/3: Psychology Club meeting, Room 320, Curris Business Building, Monday, April 3, 2017 - 8:00 pm</li>
+								<li><a href="https://www.grad.uni.edu/">4/4 (ALL DAY): Tenth Annual Graduate Student Symposium,  Maucker Union and Davis Hall, Gallagher Bluedorn Performing Arts Center, Tuesday, April 4, 2017 (All day)</a></li>
+								<li><a href="https://www.facebook.com/events/1839518059646918/">4/4: It's On Us,  Hemisphere Lounge, Maucker Union, Tuesday, April 4, 2017 - 11:00 am to 2:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/254094028333201/">4/4: Politics in the Classroom: Teaching in Challenging Times, Room 287, Rod Library, Tuesday, April 4, 2017 - 12:30 pm</a></li>
+								<li><a href="https://www.facebook.com/events/107569823112952/?active_tab=about">4/4: Alpha Delta Pi spaghetti dinner, College Hill Lutheran Church, Tuesday, April 4, 2017 - 5:00 pm to 7:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/4: Faculty Recital: Michelle Monroe, soprano, and Robin Guy, piano, Davis Hall, GBPAC, Tuesday, April 4, 2017 - 6:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/4: UNI Concert Band, Great Hall, GBPAC, Tuesday, April 4, 2017 - 7:30 p.m</a></li>
+								<li>4/4: Pride Week's Queer Monologues, Auditorium, Lang Hall, Tuesday, April 4, 2017 - 6:00 pm</li>
+								<li><a href="https://www.facebook.com/unichge">4/4: 9th Annual Norman Cohn Family Holocaust Remembrance and Education Lecture, Room 109, Curris Business Building, Tuesday, April 4, 2017 - 7:00 pm</a></li>
+								<li>4/4: Spotlight Series: Symphonic Band and Concert Band, Great Hall, GBPAC, Tuesday, April 4, 2017 - 7:30 pm</li>
+								<li><a href="https://dayofgiving.uni.edu/">4/5 (ALL DAY): UNI Day of Giving, Wednesday, April 5, 2017 (All day)</a></li>
+								<li>4/5: Book discussion: 'Fun Home', Oak Room, Maucker Union, Wednesday, April 5, 2017 - 11:00 am to 12:30 pm</li>
+								<li><a href="https://cet.uni.edu/events">4/5: Dimensions of a Survey, Room 153A, Schindler Education Center, Wednesday, April 5, 2017 - 12:00 pm</a></li>
+								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/5: Know Before You Owe, Room 102, Sabin Hall, Wednesday, April 5, 2017 - 12:00 pm to 1:00 pm</a></li>
+								<li>4/5: NSSE Data for Selected Student Groups: No Statistical Software? No Problem!, Room 136, Innovative Teaching and Technology Center, Wednesday, April 5, 2017 - 12:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/5: Guest Master Class: Elsa Verdehr, clarinet, Graham Hall, Russell Hall, Wednesday, April 5, 2017 - 3:30 pm</a></li>
+								<li><b>4/5: MATH CLUB MEETING (YOU SHOULD GO), Rod Library 218, Wednesday, April 5, 6 PM - 7 PM</b></li>
+								<li><a href="https://unialum.org/events/webinar-leadership-30-link-out-not">4/5: Webinar: Leadership 3.0 - Link Out, Not In, clarinet, Web (It's Online), Wednesday, April 5, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>4/5: What If.... We Really Focused on Families, Mothers and Babies?, Cedar Falls Public Library, Wednesday, April 5, 2017 - 7:00 pm to 8:30 pm</li>
+								<li>4/5: Pride Week's Keynote: Jeffery Marsh, Old Central Ballroom, Maucker Union, Wednesday, April 5, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/5: Guest Presentation: Elsa and Walter Verdehr, film and Q&amp;A, Davis Hall, GBPAC, Wednesday, April 5, 2017 - 8:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/6 (ALL DAY): Northern Iowa Orchestra Invitational, Davis Hall, GBPAC, Thursday, April 6, 2017 (All day)</a></li>
+								<li><a href="https://uni-nonprofit.org/community/luncheon/">4/6: Cedar Valley Nonprofit Awards Luncheon, Slife Ballroom, Commons, Thursday, April 6, 2017 - 12:00 pm to 1:30 pm</a></li>
+								<li>4/6: Tallgrass Prairie Center - Restoration &amp; Natural Management Seminar, Tallgrass Prairie Center 2412 West 27th Street, Cedar Falls, IA, Thursday, April 6, 2017 - 4:00 pm</li>
+								<li><a href="https://www.facebook.com/events/718285611664957/">4/6: Tie It Blue, College Hill Lutheran Church, Thursday, April 6, 2017 - 5:00 pm to 8:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/6: Faculty Recital: Bob Dunn, guitar, Graham Hall, Russell Hall, Thursday, April 6, 2017 - 6:00 pm</a></li>
+								<li>4/6: Pride Week's Movie Screening: 'Gen Slient', Room 111, Kamerick Art Building, Thursday, April 6, 2017 - 6:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/6: Guest Recital: Toby Furr, euphonium, Davis Hall, GBPAC, Thursday, April 6, 2017 - 8:00 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">4/6: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 6, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/267726456988243/">4/7: CME First Friday: Asian and Pacific Islander Month, UNI-CFMCE, Friday, April 7, 2017 - 5:00 pm to 8:30 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/7: Faculty and Guest Recital: Randall Harlow, organ, and Celeste Bembry, soprano, Jebe Hall, GBPAC, Friday, April 7, 2017 - 6:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/7: Spotlight Series: UNI Jazz Band One and Concert Chorale, Great Hall, GBPAC, Friday, April 7, 2017 - 7:30 pm</a></li>
+								<li>4/7: Progressive Prom, Towers Lounge, Friday, April 7, 2017 - 8:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/8 (ALL DAY): UNI Reed Day, Davis Hall, GBPAC, Saturday, April 8, 2017 (All day)</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-725/erths-dinosaur-zoo-live.aspx">4/8: Erth's Dinosaur Zoo Live, Gallagher Bluedorn Performing Arts Center, Saturday, April 8, 2017 - 1:00 pm</a></li>
+								<li><a href="http://main.acsevents.org/site/TR/RelayForLife/RFLCY17MW?pg=entry&fr_id=80219">4/8: Relay For Life of UNI, McLeod Center, Saturday, April 8, 2017 - 2:00 pm to Sunday, April 9, 2017 - 12:00 am</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-725/erths-dinosaur-zoo-live.aspx">4/8: Erth's Dinosaur Zoo Live, Gallagher Bluedorn Performing Arts Center, Saturday, April 8, 2017 - 4:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
