--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 6 April 2017</span>
+                                        <span class="data">Last Updated: 9 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/4-7-class-recap.html">4/7/17 Today Niko told us why student athletes should be paid and Abby gave a speech on ACL tears.</a></li>
 								<li><a href="html_bucket_class_recaps/4-5-class-recap.html">4/5/17 Today we had a discussion about paying student athletes and Zach gave a speech on suicide awareness.</a></li>
 								<li><a href="html_bucket_class_recaps/4-3-class-recap.html">4/3/17 Reanna gave a speech about abortion and Hannah talked about optimism.</a></li>
 								<li><a href="html_bucket_class_recaps/3-31-class-recap.html">3/31/17 Sophie taught us a bit about acne and Joslny gave a speech about living on cruise ships</a></li>
