events page updated for week of 4/10

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 2 April 2017</span>
+                                        <span class="data">Last Updated: 9 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,48 +117,31 @@
 							 <ul class="tales-list">
 								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
 								<li>ALL WEEK: "Dr. Seuss Wants You" and "Facing Prejudice", Grout Museum of History &amp; Science, 503 South St., Waterloo, IA 50701, Tuesday, April 4, 2017 (All day) to Saturday, June 3, 2017 (All day)</li>
-								<li>ALL WEEK: 2017 Art Gay-la Exhibit, Learning Commons, Rod Library, Monday, April 3, 2017 - 8:00 am to Sunday, April 9, 2017 - 8:00 pm</li>
-								<li>4/3: CROW Forum: Outstanding Graduate Award Winne, Room 287, Rod Library, Monday, April 3, 2017 - 12:00 pm</li>
-								<li>4/3: UNI Camp Adventure Training, Wellness/Recreation Cener, Monday, April 3, 2017 - 5:00 pm</li>
-								<li>4/3: The Sigma Tau Delta Lecture, Room 120, Seerley Hall, Monday, April 3, 2017 - 7:00 pm</li>
-								<li>4/3: Pride Week Drag Ball, Auditorium, Lang Hall, Monday, April 3, 2017 - 8:00 pm</li>
-								<li>4/3: Psychology Club meeting, Room 320, Curris Business Building, Monday, April 3, 2017 - 8:00 pm</li>
-								<li><a href="https://www.grad.uni.edu/">4/4 (ALL DAY): Tenth Annual Graduate Student Symposium,  Maucker Union and Davis Hall, Gallagher Bluedorn Performing Arts Center, Tuesday, April 4, 2017 (All day)</a></li>
-								<li><a href="https://www.facebook.com/events/1839518059646918/">4/4: It's On Us,  Hemisphere Lounge, Maucker Union, Tuesday, April 4, 2017 - 11:00 am to 2:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/254094028333201/">4/4: Politics in the Classroom: Teaching in Challenging Times, Room 287, Rod Library, Tuesday, April 4, 2017 - 12:30 pm</a></li>
-								<li><a href="https://www.facebook.com/events/107569823112952/?active_tab=about">4/4: Alpha Delta Pi spaghetti dinner, College Hill Lutheran Church, Tuesday, April 4, 2017 - 5:00 pm to 7:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/4: Faculty Recital: Michelle Monroe, soprano, and Robin Guy, piano, Davis Hall, GBPAC, Tuesday, April 4, 2017 - 6:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/4: UNI Concert Band, Great Hall, GBPAC, Tuesday, April 4, 2017 - 7:30 p.m</a></li>
-								<li>4/4: Pride Week's Queer Monologues, Auditorium, Lang Hall, Tuesday, April 4, 2017 - 6:00 pm</li>
-								<li><a href="https://www.facebook.com/unichge">4/4: 9th Annual Norman Cohn Family Holocaust Remembrance and Education Lecture, Room 109, Curris Business Building, Tuesday, April 4, 2017 - 7:00 pm</a></li>
-								<li>4/4: Spotlight Series: Symphonic Band and Concert Band, Great Hall, GBPAC, Tuesday, April 4, 2017 - 7:30 pm</li>
-								<li><a href="https://dayofgiving.uni.edu/">4/5 (ALL DAY): UNI Day of Giving, Wednesday, April 5, 2017 (All day)</a></li>
-								<li>4/5: Book discussion: 'Fun Home', Oak Room, Maucker Union, Wednesday, April 5, 2017 - 11:00 am to 12:30 pm</li>
-								<li><a href="https://cet.uni.edu/events">4/5: Dimensions of a Survey, Room 153A, Schindler Education Center, Wednesday, April 5, 2017 - 12:00 pm</a></li>
-								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/5: Know Before You Owe, Room 102, Sabin Hall, Wednesday, April 5, 2017 - 12:00 pm to 1:00 pm</a></li>
-								<li>4/5: NSSE Data for Selected Student Groups: No Statistical Software? No Problem!, Room 136, Innovative Teaching and Technology Center, Wednesday, April 5, 2017 - 12:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/5: Guest Master Class: Elsa Verdehr, clarinet, Graham Hall, Russell Hall, Wednesday, April 5, 2017 - 3:30 pm</a></li>
-								<li><b>4/5: MATH CLUB MEETING (YOU SHOULD GO), Rod Library 218, Wednesday, April 5, 6 PM - 7 PM</b></li>
-								<li><a href="https://unialum.org/events/webinar-leadership-30-link-out-not">4/5: Webinar: Leadership 3.0 - Link Out, Not In, clarinet, Web (It's Online), Wednesday, April 5, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>4/5: What If.... We Really Focused on Families, Mothers and Babies?, Cedar Falls Public Library, Wednesday, April 5, 2017 - 7:00 pm to 8:30 pm</li>
-								<li>4/5: Pride Week's Keynote: Jeffery Marsh, Old Central Ballroom, Maucker Union, Wednesday, April 5, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/5: Guest Presentation: Elsa and Walter Verdehr, film and Q&amp;A, Davis Hall, GBPAC, Wednesday, April 5, 2017 - 8:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/6 (ALL DAY): Northern Iowa Orchestra Invitational, Davis Hall, GBPAC, Thursday, April 6, 2017 (All day)</a></li>
-								<li><a href="https://uni-nonprofit.org/community/luncheon/">4/6: Cedar Valley Nonprofit Awards Luncheon, Slife Ballroom, Commons, Thursday, April 6, 2017 - 12:00 pm to 1:30 pm</a></li>
-								<li>4/6: Tallgrass Prairie Center - Restoration &amp; Natural Management Seminar, Tallgrass Prairie Center 2412 West 27th Street, Cedar Falls, IA, Thursday, April 6, 2017 - 4:00 pm</li>
-								<li><a href="https://www.facebook.com/events/718285611664957/">4/6: Tie It Blue, College Hill Lutheran Church, Thursday, April 6, 2017 - 5:00 pm to 8:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/6: Faculty Recital: Bob Dunn, guitar, Graham Hall, Russell Hall, Thursday, April 6, 2017 - 6:00 pm</a></li>
-								<li>4/6: Pride Week's Movie Screening: 'Gen Slient', Room 111, Kamerick Art Building, Thursday, April 6, 2017 - 6:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/6: Guest Recital: Toby Furr, euphonium, Davis Hall, GBPAC, Thursday, April 6, 2017 - 8:00 pm</a></li>
-								<li><a href="https://earth.uni.edu/content/observatory-visit">4/6: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 6, 2017 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/267726456988243/">4/7: CME First Friday: Asian and Pacific Islander Month, UNI-CFMCE, Friday, April 7, 2017 - 5:00 pm to 8:30 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/7: Faculty and Guest Recital: Randall Harlow, organ, and Celeste Bembry, soprano, Jebe Hall, GBPAC, Friday, April 7, 2017 - 6:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/7: Spotlight Series: UNI Jazz Band One and Concert Chorale, Great Hall, GBPAC, Friday, April 7, 2017 - 7:30 pm</a></li>
-								<li>4/7: Progressive Prom, Towers Lounge, Friday, April 7, 2017 - 8:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/8 (ALL DAY): UNI Reed Day, Davis Hall, GBPAC, Saturday, April 8, 2017 (All day)</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-725/erths-dinosaur-zoo-live.aspx">4/8: Erth's Dinosaur Zoo Live, Gallagher Bluedorn Performing Arts Center, Saturday, April 8, 2017 - 1:00 pm</a></li>
-								<li><a href="http://main.acsevents.org/site/TR/RelayForLife/RFLCY17MW?pg=entry&fr_id=80219">4/8: Relay For Life of UNI, McLeod Center, Saturday, April 8, 2017 - 2:00 pm to Sunday, April 9, 2017 - 12:00 am</a></li>
-								<li><a href="http://www.gbpac.com/upcoming-events/e-725/erths-dinosaur-zoo-live.aspx">4/8: Erth's Dinosaur Zoo Live, Gallagher Bluedorn Performing Arts Center, Saturday, April 8, 2017 - 4:00 pm</a></li>
+								<li><a href="https://honors.uni.edu/honors-weekl">ALL WEEK: Honors Week, Across campus, Saturday, April 8, 2017 (All day) to Friday, April 14, 2017 (All day)</a></li>
+								<li><a href="https://www.facebook.com/events/386095568443467/">ALL WEEK: Cheek Week, Maucker Union, Monday, April 10, 2017 - 10:00 am to Friday, April 14, 2017 - 2:00 pm</a></li>
+								<li>ALL WEEK: National Student Employment Week, Monday, April 10, 2017 - 8:00 am to Saturday, April 15, 2017 - 5:00 pm</li>
+								<li>4/10: How Technology and Collaboration Created a Unique Advising Opportunity, Room 373, Rod Library, Monday, April 10, 2017 - 3:30 pm</li>
+								<li><a href="https://music.uni.edu/events">4/10: UNI Bassoon Studio Recital, Bengtson Auditorium, Russell Hall, Monday, April 10, 2017 - 6:00 pm</a></li>
+								<li>4/10: Chastity Without the Belt: Re-thinking Sexual Virtue, Oak Room, Maucker Union, Monday, April 10, 2017 - 8:00 pm</li>
+								<li><a href="https://www.physics.uni.edu/outreach/uni-physics-olympics">4/11: State of Iowa Physics Competition, McLeod Center, Tuesday, April 11, 2017 - 9:30 am to 12:30 pm</a></li>
+								<li>4/11: Teal Tuesday, Oak Room, Maucker Union, Tuesday, April 11, 2017 - 11:00 am to 2:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/11: Guest Recital: Tom Curry, tuba, Davis Hall, GBPAC, Tuesday, April 11, 2017 - 6:00 pm</a></li>
+								<li><a href="https://studentleadershipawards.uni.edu/">4/11: Student Leadership Awards, Old Central Ballroom, Maucker Union, Tuesday, April 11, 2017 - 7:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/11: Faculty Artist Recital: Dmitri Vorobiev, piano - Beethoven Concert #10, Davis Hall, GBPAC, Tuesday, April 11, 2017 - 8:00 pm</a></li>
+								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/12: Adulting: Financial Life After College, Presidential Room, Maucker Union, Wednesday, April 12, 2017 - 12:00 pm to 1:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/254094028333201/">4/12: Politics in the Classroom: Teaching in Challenging Times, Elm Room, Maucker Union, Wednesday, April 12, 2017 - 12:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/12: UNI Slide Show, Bengtson Auditorium, Russell Hall, Wednesday, April 12, 2017 - 6:00 pm</a></li>
+								<li><a href="https://unialum.org/events/webinar-mid-life-career-rescue">4/12: Webinar: Mid-Life Career Rescue, Web (It's Online), Wednesday, April 12, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>4/13: Free Sexual Health Screening, Student Health Clinic, Thursday, April 13, 2017 - 8:30 am to 12:00 pm</li>
+								<li><a href="https://www.facebook.com/events/248099552265379/">4/13: Self-Care Day, Old Central Ballroom, Maucker Union, Thursday, April 13, 2017 - 11:00 am to 2:00 pm</a></li>
+								<li>4/13: EAP Session: Coping: Difficult Conversations with Difficult People, Rooms 007/009, Gilchrist Hall, Thursday, April 13, 2017 - 3:00 pm</li>
+								<li>4/13: A poetry reading with Wyatt Townley, Room 1017, Bartlett Hall, Thursday, April 13, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/13: UNITUBA Concert, Davis Hall, GBPAC, Thursday, April 13, 2017 - 8:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/13: Faculty Recital: Amanda McCandless, clarinet, Bengtson Auditorium, Russell Hall, Thursday, April 13, 2017 - 8:00 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">4/13: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 13, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/14: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, April 14, 2017 - 12:15 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/14: UNI Oboe Studio Recital, Bengtson Auditorium, Russell Hall, Friday, April 14, 2017 - 6:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/14: Guest Recital: Edisher Savitski, piano, Davis Hall, GBPAC, Friday, April 14, 2017 - 8:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
