--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 13 April 2017</span>
+                                        <span class="data">Last Updated: 17 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/4-14-class-recap.html">4/14/17 We suprised Nick with a card and some candy for his birthday. Then we had some speech goodness!</a></li>
 								<li><a href="html_bucket_class_recaps/4-12-class-recap.html">4/12/17 Savannah gave a speech on premature births and Dylan tought us about lacrosse.</a></li>
 								<li><a href="html_bucket_class_recaps/4-10-class-recap.html">4/10/17 Today we had a speech on climate change and we had time for Jacob to share more facts on concussions.</a></li>
 								<li><a href="html_bucket_class_recaps/4-7-class-recap.html">4/7/17 Today Niko told us why student athletes should be paid and Abby gave a speech on ACL tears.</a></li>
