--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/4-17-class-recap.html">4/17/17 We FINALLY started group speeches! Wohoo. We had a group speech on PTSD today.</a></li>
 								<li><a href="html_bucket_class_recaps/4-14-class-recap.html">4/14/17 We suprised Nick with a card and some candy for his birthday. Then we had some speech goodness!</a></li>
 								<li><a href="html_bucket_class_recaps/4-12-class-recap.html">4/12/17 Savannah gave a speech on premature births and Dylan tought us about lacrosse.</a></li>
 								<li><a href="html_bucket_class_recaps/4-10-class-recap.html">4/10/17 Today we had a speech on climate change and we had time for Jacob to share more facts on concussions.</a></li>
