events page updated for week of 4/17

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 9 April 2017</span>
+                                        <span class="data">Last Updated: 17 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -115,33 +115,47 @@
 								could go to that would count. So feel free to attend something not on the list!
 							 </p>
 							 <ul class="tales-list">
-								<li><a href="http://www.uni.edu/art/gallery.html">ALL WEEK: "Annual Juried Student Art Exhibition", UNI Gallery of Art, Kamerick Art Building, Monday, March 20, 2017 - 7:00 pm to Saturday, April 15, 2017 - 5:00 pm</a></li>
 								<li>ALL WEEK: "Dr. Seuss Wants You" and "Facing Prejudice", Grout Museum of History &amp; Science, 503 South St., Waterloo, IA 50701, Tuesday, April 4, 2017 (All day) to Saturday, June 3, 2017 (All day)</li>
-								<li><a href="https://honors.uni.edu/honors-weekl">ALL WEEK: Honors Week, Across campus, Saturday, April 8, 2017 (All day) to Friday, April 14, 2017 (All day)</a></li>
-								<li><a href="https://www.facebook.com/events/386095568443467/">ALL WEEK: Cheek Week, Maucker Union, Monday, April 10, 2017 - 10:00 am to Friday, April 14, 2017 - 2:00 pm</a></li>
-								<li>ALL WEEK: National Student Employment Week, Monday, April 10, 2017 - 8:00 am to Saturday, April 15, 2017 - 5:00 pm</li>
-								<li>4/10: How Technology and Collaboration Created a Unique Advising Opportunity, Room 373, Rod Library, Monday, April 10, 2017 - 3:30 pm</li>
-								<li><a href="https://music.uni.edu/events">4/10: UNI Bassoon Studio Recital, Bengtson Auditorium, Russell Hall, Monday, April 10, 2017 - 6:00 pm</a></li>
-								<li>4/10: Chastity Without the Belt: Re-thinking Sexual Virtue, Oak Room, Maucker Union, Monday, April 10, 2017 - 8:00 pm</li>
-								<li><a href="https://www.physics.uni.edu/outreach/uni-physics-olympics">4/11: State of Iowa Physics Competition, McLeod Center, Tuesday, April 11, 2017 - 9:30 am to 12:30 pm</a></li>
-								<li>4/11: Teal Tuesday, Oak Room, Maucker Union, Tuesday, April 11, 2017 - 11:00 am to 2:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/11: Guest Recital: Tom Curry, tuba, Davis Hall, GBPAC, Tuesday, April 11, 2017 - 6:00 pm</a></li>
-								<li><a href="https://studentleadershipawards.uni.edu/">4/11: Student Leadership Awards, Old Central Ballroom, Maucker Union, Tuesday, April 11, 2017 - 7:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/11: Faculty Artist Recital: Dmitri Vorobiev, piano - Beethoven Concert #10, Davis Hall, GBPAC, Tuesday, April 11, 2017 - 8:00 pm</a></li>
-								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/12: Adulting: Financial Life After College, Presidential Room, Maucker Union, Wednesday, April 12, 2017 - 12:00 pm to 1:00 pm</a></li>
-								<li><a href="https://www.facebook.com/events/254094028333201/">4/12: Politics in the Classroom: Teaching in Challenging Times, Elm Room, Maucker Union, Wednesday, April 12, 2017 - 12:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/12: UNI Slide Show, Bengtson Auditorium, Russell Hall, Wednesday, April 12, 2017 - 6:00 pm</a></li>
-								<li><a href="https://unialum.org/events/webinar-mid-life-career-rescue">4/12: Webinar: Mid-Life Career Rescue, Web (It's Online), Wednesday, April 12, 2017 - 7:00 pm to 8:00 pm</a></li>
-								<li>4/13: Free Sexual Health Screening, Student Health Clinic, Thursday, April 13, 2017 - 8:30 am to 12:00 pm</li>
-								<li><a href="https://www.facebook.com/events/248099552265379/">4/13: Self-Care Day, Old Central Ballroom, Maucker Union, Thursday, April 13, 2017 - 11:00 am to 2:00 pm</a></li>
-								<li>4/13: EAP Session: Coping: Difficult Conversations with Difficult People, Rooms 007/009, Gilchrist Hall, Thursday, April 13, 2017 - 3:00 pm</li>
-								<li>4/13: A poetry reading with Wyatt Townley, Room 1017, Bartlett Hall, Thursday, April 13, 2017 - 7:00 pm</li>
-								<li><a href="https://music.uni.edu/events">4/13: UNITUBA Concert, Davis Hall, GBPAC, Thursday, April 13, 2017 - 8:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/13: Faculty Recital: Amanda McCandless, clarinet, Bengtson Auditorium, Russell Hall, Thursday, April 13, 2017 - 8:00 pm</a></li>
-								<li><a href="https://earth.uni.edu/content/observatory-visit">4/13: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 13, 2017 - 9:00 pm to 10:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/14: Northern Iowa Bach Cantata Series Performance, McElroy Lobby, GBPAC, Friday, April 14, 2017 - 12:15 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/14: UNI Oboe Studio Recital, Bengtson Auditorium, Russell Hall, Friday, April 14, 2017 - 6:00 pm</a></li>
-								<li><a href="https://music.uni.edu/events">4/14: Guest Recital: Edisher Savitski, piano, Davis Hall, GBPAC, Friday, April 14, 2017 - 8:00 pm</a></li>
+								<li>4/17: Teach UNI Project: "Strengthening Resiliency in the First-Year-Only Classroom", Room 378, Rod Library, Monday, April 17, 2017 - 3:00 pm</li>
+								<li><a href="https://www.facebook.com/events/1755109084819109/">4/17: Immigration Forum: A Conversation about Immigration in Iowa, Room 002, Sabin Hall, Monday, April 17, 2017 - 3:00 pm to 5:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/17: Jazz Band III, Bengtson Auditorium, Russell Hall, Monday, April 17, 2017 - 7:30 pm</a></li>
+								<li><a href="https://www.library.uni.edu/rodcast/201704/trevor-dawes-visit-rod-library-april-18th">4/18: Trevor Dawes presentation, Room 301, Rod Library, Tuesday, April 18, 2017 - 11:00 am</a></li>
+								<li>4/18: Green Zone Training, State College Room, Maucker Union, Tuesday, April 18, 2017 - 1:00 pm to 2:30 pm</li>
+								<li>4/18: Daoism in Chinese Painting, Room 109, Curris Business Building, Tuesday, April 18, 2017 - 4:00 pm</li>
+								<li>4/18: Alpha Sigma Tau "Tater Taus" fundraiser, Wesley Foundation, Tuesday, April 18, 2017 - 5:00 pm <b> - Go hang out with sophie and addy!</b></li>
+								<li><a href="https://music.uni.edu/events">4/18: Percussion Studio Concert, Davis Hall, GBPAC, Tuesday, April 18, 2017 - 8:00 pm</a></li>
+								<li>4/19: LGBT(ea) Time, LGBT* Center, Maucker Union, Wednesday, April 19, 2017 - 12:00 pm</li>
+								<li><a href="https://finaid.uni.edu/financial-literacy-month-2017">4/19: Salary, Compensation, and Benefits: What to Know About Your First Job, Presidential Room, Maucker Union, Wednesday, April 19, 2017 - 12:00 pm to 1:00 pm</a></li>
+								<li><a href="https://csbs.uni.edu/military-science">4/19: UNI-ROTC Awards Ceremony, Great Reading Room, Seerley Hall, Wednesday, April 19, 2017 - 3:00 pm</a></li>
+								<li><a href="https://unialum.org/events/webinar-six-essential-soft-skills-indispensable-professionals">4/19: Webinar: Six Essential Soft Skills of Indispensable Professionals, Web (It's Online), Wednesday, April 19, 2017 - 7:00 pm to 8:00 pm</a></li>
+								<li>4/19: Diversity Colloquium: Serving Our Community, While Learning: Service-Learning and Professional Development at UNI, Scholar Space, Rod Library, Wednesday, April 19, 2017 - 7:00 pm</li>
+								<li>4/19: PAT/History Club Lecture, Room 115, Seerley Hall, Wednesday, April 19, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/19: Student Composers Concert, Davis Hall, GBPAC, Wednesday, April 19, 2017 - 8:00 pm</a></li>
+								<li>4/20: Earth Day Celebration, NW Courtyard, Maucker Union, Thursday, April 20, 2017 - 10:00 am to 2:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/20: Guest Artist Recital: Karel Keldermans, carillon, Campanile, UNI Campus, Thursday, April 20, 2017 - 12:00 pm</a></li>
+								<li>4/20: Free Sexual Health Screening, Student Health Clinic, Thursday, April 20, 2017 - 1:00 pm to 3:30 pm</li>
+								<li>4/20: The Pedagogical Role of Evidence in Changing Students' Minds, Room 378, Rod Library, Thursday, April 20, 2017 - 3:30 pm</li>
+								<li>4/20: West African Drum Ensemble performance, UNI Museum, first floor Rod Library, Thursday, April 20, 2017 - 5:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/20: Faculty Lecture-Recital: Melinda Boyd with Jean McDonald, mezzo-soprano, and Robin Guy, piano, Graham Hall, Russell Hall, Thursday, April 20, 2017 - 6:00 pm</a></li>
+								<li>4/20: Psychology Club meeting, Room 320, Curris Business Building, Thursday, April 20, 2017 - 6:00 pm</li>
+								<li>4/20: Take Back the Night, Rooftop Plaza, Maucker Union, Thursday, April 20, 2017 - 7:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/20: Jazz Panthers, Bengtson Auditorium, Russell Hall, Thursday, April 20, 2017 - 7:30 pm</a></li>
+								<li><a href="https://commstudies.uni.edu/about">4/20: Performance Power Hour, Room 040, Lang Hall, Thursday, April 20, 2017 - 7:30 pm</a></li>
+								<li><a href="https://earth.uni.edu/content/observatory-visit">4/20: Observatory Show, Room 137, McCollum Science Hall, Thursday, April 20, 2017 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="https://music.uni.edu/windsymphonyalumni">4/21 ALL DAY: Wind Symphony Alumni Reunion, Urbandale, IA and UNI Campus, Cedar Falls, Friday, April 21, 2017 (All day) to Monday, April 24, 2017 (All day)</a></li>
+								<li>4/21: Biometric Screening, Rooms 007/009, Gilchrist Hall, Friday, April 21, 2017 - 7:00 am</li>
+								<li><a href="https://music.uni.edu/events">4/21: Guest Artist Recital: Karel Keldermans, carillon, Campanile, UNI Campus, Friday, April 21, 2017 - 12:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/21: Into The Woods, Gallagher Bluedorn Performing Arts Center, Friday, April 21, 2017 - 7:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/1170600789717034/">4/21: Film Appreciation Club: 'Mulholland Drive', Room 111, Kamerick Art Building, Friday, April 21, 2017 - 7:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/22 ALL DAY: Community Music School Recital Weekend, Russell Hall, Saturday, April 22, 2017 (All day) to Sunday, April 23, 2017 (All day)</a></li>
+								<li><a href="https://music.uni.edu/events">4/22: Music Education Workshop, Davis Hall, GBPAC, Saturday, April 22, 2017 - 9:00 am</a></li>
+								<li><a href="https://goodneighboriowa.org/">4/22: Good Neighbor Iowa Kickoff Event, Seerley Park, Saturday, April 22, 2017 - 10:00 am to 11:30 am</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/22: Into The Woods, Gallagher Bluedorn Performing Arts Center, Saturday, April 22, 2017 - 2:00 pm</a></li>
+								<li><a href="https://music.uni.edu/events">4/22: UNI Faculty Piano Quartet, Graham Hall, Russell Hall, Saturday, April 22, 2017 - 6:00 pm</a></li>
+								<li><a href="https://fashionshow25.splashthat.com/">4/22: TAPP Catwalk 25 Around the World in 60 Minutes, Auditorium, Lang Hall, Saturday, April 22, 2017 - 7:00 pm to 9:00 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-727/into-the-woods.aspx">4/23: Into The Woods, Gallagher Bluedorn Performing Arts Center, Sunday, April 23, 2017 - 2:00 pm</a></li>
+								<li>4/23: Psi Chi Honor Society Induction, Old Central Ballroom C, Maucker Union, Sunday, April 23, 2017 - 3:00 pm to 4:00 pm</li>
+								<li><a href="https://music.uni.edu/events">4/23: UNI Suzuki School Northern Iowa Junior Orchestra Concert, Davis Hall, GBPAC, Sunday, April 23, 2017 - 6:00 pm</a></li>
                             </ul>
 						</div>
                     </article>
