--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 17 April 2017</span>
+                                        <span class="data">Last Updated: 21 April 2017</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go.
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/4-19-class-recap.html">4/19/17 We talked about class feedback and deconstructed some shark tank pitches.</a></li>
 								<li><a href="html_bucket_class_recaps/4-17-class-recap.html">4/17/17 We FINALLY started group speeches! Wohoo. We had a group speech on PTSD today.</a></li>
 								<li><a href="html_bucket_class_recaps/4-14-class-recap.html">4/14/17 We suprised Nick with a card and some candy for his birthday. Then we had some speech goodness!</a></li>
 								<li><a href="html_bucket_class_recaps/4-12-class-recap.html">4/12/17 Savannah gave a speech on premature births and Dylan tought us about lacrosse.</a></li>
